# QuAcc

./: .coverage  .gitignore  .gitmodules  Dockerfile  README.md  TODO.html  TODO.md  accuracy_prediction_via_quantification.py  accuracy_prediction_via_quantification2.py  conf.yaml  copy_res.sh  copy_source.sh  ideas.md  log  log_remote  merge_data.py  out  out.html  out_imdb.html  out_imdb.md  out_rcv1.html  out_rcv1.md  out_spambase.html  out_spambase.md  pyproject.toml  rates.md  remote.py  requirements.txt  roadmap.md  run.py  selected_gs.py  test.py  test_imdb_max_shift.py  test_mc.md  test_postprocess.py
baselines/: atc.py  doc.py  gde.py  impweight.py  mandoline.py  models.py  pykliep.py  rca.py  utils.py
baselines/densratio/: RuLSIF.py  __init__.py  core.py  density_ratio.py  helpers.py
calibration/: __init__.py  base.py  bcts.py  error.py  lascal.py  ts.py  util.py
cap/: __init__.py  environment.py  error.py  table.py
cap/data/: datasets.py  util.py
cap/experiments/: plotting.py  run.py  tables.py  util.py
cap/models/: base.py  cont_table.py  direct.py  model_selection.py
cap/plot/: seaborn.py  utils.py
cap/utils/: commons.py
docker/: Dockerfile  dbuild.sh  ddebug.sh  deploy.sh  dlog.sh  docker.env  drun.sh  syncres.sh
exp/: critdd.py  ctdiff.py  generators.py  leap.py  plotting.py  report.py  run.py  sampling.py  tables.py  util.py
exp/leap/: _datasets.py  bootstrap.py  config.py  corr.py  ctdiff.py  ctsum.py  env.py  generators.py  linear.py  main.py  new_base.py  parallel.py  pearson.py  plot.py  qerr.py  rcv1.py  sample_size.py  sparse.py  table.py  table_test.py  times.py  util.py
exp/predq/: config.py  main.py  table.py  util.py
exp/trd/: app_grid.py  config.py  main.py  model_selection.py  table.py  util.py
garg22_ATC/: ATC_helper.py
lipton_bbse/: labelshift.py
playground/: calibration.py  debug.py  imdb.py  kfcv.py  lascal.py  n2e_test.py  njobs_test.py  protocol.py  rcv1.info  rcv1_bin.py  rcv1_h.py  rcv1_info.py  rcv1_multi.json  rcv1_multiclass_test.py  rename_results.py  requa.py  requa_test.py  soft_leap.py  times.py  torch.py  torchv2.py  train_and_embed.py  uci_binary.py
qcdash/: app.py  navbar.py
qcdash/assets/: radio_group.css
qcdash/pages/: home.py  plot.py  table.py
qcpanel/: old_run.py  run.py  util.py  viewer.py
quacc/: __init__.py  baseline.py  data.py  dataset.py  environ.py  environment.py  error.py  estimator.py  evaluation.py  logger.py  logging.py  main.py  main_test.py  plot.py  quantifier.py  table.py  test_1.py  utils.py
quacc/calibration/: base.py  bcts.py  lascal.py  ts.py
quacc/data/: dataset.py  datasets.py  hfdatasets.py  util.py
quacc/evaluation/: __init__.py  alt.py  baseline.py  comp.py  estimators.py  evaluate.py  method.py  (+3 more)
tests/: test_baseline.py  test_data.py  test_dataset.py  test_error.py  test_estimator.py
(+90 files in other folders)
