[tool.poetry]
name = "cap"
version = "0.1.0"
description = ""
authors = ["Lorenzo Volpi <lorenzo.volpi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
quapy = "^0.1.9"
certifi = "^2025.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
