[tool.poetry]
name = "quacc"
version = "0.1.0"
description = ""
authors = ["Lorenzo Volpi <lorenzo.volpi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
certifi = "^2024.2.2"
torch = "^2.3.0"
pot = "^0.9.3"
transformers = {extras = ["torch"], version = "^4.42.3"}
datasets = "^2.20.0"
abstention = "^0.1.3.1"
joblib = "^1.4.2"
scikit-learn = "^1.5.1"
threadpoolctl = "^3.5.0"
ucimlrepo = "^0.0.7"
xlrd = "^2.0.1"
quapy = {git = "https://github.com/lorenzovolpi/QuaPy.git", rev = "accuracy"}
critdd = {git = "https://github.com/mirkobunse/critdd"}
lascal = {git = "https://github.com/tpopordanoska/label-shift-calibration.git"}
cvxpy = "^1.6.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dash.dependencies]
dash = "^2.14.1"
tabulate = "^0.9.0"
gunicorn = "^21.2.0"
dash-bootstrap-components = "^1.6.0"
plotly = "^5.22.0"

[tool.poetry.group.lascal.dependencies]
rich = "^14.0.0"

[tool.pytest.ini_options]
addopts = "--cov=quacc -rA --cov-report html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

