# [build-system]
# requires = ["setuptools >= 77.0.3"]
# build-backend = "setuptools.build_meta"

[project]
name = "quacc"
version = "0.1.1.4"
description = "The quacc python library for Classifier Accuracy Prediction in ML"
authors = [
  {name = "Lorenzo Volpi", email = "lorenzo.volpi@outlook.com"}
]
mainteiners = [
  {name = "Lorenzo Volpi", email = "lorenzo.volpi@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "quapy>=0.1.9,<0.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "ucimlrepo>=0.0.7",
    "lascal @ git+https://github.com/tpopordanoska/label-shift-calibration.git",
    "rich>=14.0.0",
    "joblib>=1.5.1",
    "seaborn>=0.13.2",
    "pot>=0.9.5",
    "torch>=2.7.1",
    "cvxpy>=1.7.0",
]

[dependency-groups]
dev = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "transformers>=4.53.2",
]

[tool.pytest.ini_options]
addopts = "--cov=quacc -rA --cov-report html"

[tool.ruff]
line-length = 120

